boreal/tests/assets/invalid_files/parsing/string_modifier_duplicated3.yar
rule a {
    strings:
        $a = "a" base64 xor base64
}
